@@ -18,9 +18,9 @@
 \usepackage{courier}
 
 %%% User specified packages and stylesheets
-\usepackage{docutils}
 
 %%% Fallback definitions for Docutils-specific commands
+\usepackage{docutils}[2020/08/28]
 
 % character width in monospaced font
 \newlength{\ttemwidth}
